correccion titulos formatosz

--- a/Peugeot/Venetian.html
+++ b/Peugeot/Venetian.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <head>
- <meta charset="UTF-8">   
 <title>HTML5 STUDIO BUILDER: Venetian v 1.5</title>
 
 <!-- Adform API Script -->
@@ -2193,29 +2192,29 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i7.text.css:text/base/css*/
 #i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 279px; height: 72px;
-        -ms-transform: translate(0, 0) translate(13px, 380px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(13px, 380px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(13px, 380px) rotate(0deg);
-        transform: translate(0, 0) translate(13px, 380px) rotate(0deg);
+#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 279px; height: 46px;
+        -ms-transform: translate(0, 0) translate(11px, 367px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(11px, 367px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(11px, 367px) rotate(0deg);
+        transform: translate(0, 0) translate(11px, 367px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
-#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 12px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: justify; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: justify; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
-#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 253px; height: 98px;
-        -ms-transform: translate(0, 0) translate(23px, 452px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(23px, 452px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(23px, 452px) rotate(0deg);
-        transform: translate(0, 0) translate(23px, 452px) rotate(0deg);
+#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 253px; height: 155px;
+        -ms-transform: translate(0, 0) translate(26px, 415px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(26px, 415px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(26px, 415px) rotate(0deg);
+        transform: translate(0, 0) translate(26px, 415px) rotate(0deg);
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 90px; height: 50px;
-        -ms-transform: translate(0, 0) translate(209px, 547px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(209px, 547px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(209px, 547px) rotate(0deg);
-        transform: translate(0, 0) translate(209px, 547px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 80px; height: 44px;
+        -ms-transform: translate(0, 0) translate(221px, 554px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(221px, 554px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(221px, 554px) rotate(0deg);
+        transform: translate(0, 0) translate(221px, 554px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2280,9 +2279,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Seguridad, cómodidad  y gran espacio para que lleves todo lo que necesites.</div>
+<div id="i7">3 Razones para elegir el PARTNER</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">Tu  PEUGEOT Partner  posee un umbral de carga con puertas batientes traseras cubiertas, que son asimétricas, se abren en un ángulo de 180°. Permiten el acceso a una abertura rectangular, facilitando la carga de objetos voluminosos. La manipulación de cargas es aún más sencilla gracias a la presencia de una puerta lateral corredora.</div>
+<div id="i12">1. Sólida y lista para todo: Desde más de 20 años, PEUGEOT Partner demuestra su calidad y su fiabilidad en la carretera.
+
+2. Tecnología útil: PEUGEOT Partner cuenta con aire acondicionado, que le ayudará a enfrentar de mejor forma las condiciones climáticas.
+
+3. Motorización: Con la tecnología HDi Peugeot, Partner cuida el medio ambiente.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/wCs3wj3.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
@@ -2455,11 +2458,13 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: Seguridad, cómodidad  y gran espacio para que lleves todo lo que necesites.; customName: false;
+name: 3 Razones para elegir el PARTNER; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: Tu  PEUGEOT Partner  posee un umbral de carga con puertas batientes traseras cubiertas, que son asimétricas, se abren en un ángulo de 180°. Permiten el acceso a una abertura rectangular, facilitando la carga de objetos voluminosos. La manipulación de carg; customName: false;
+name: 1. Sólida y lista para todo: Desde más de 20 años, PEUGEOT Partner demuestra su calidad y su fiabilidad en la carretera.
+
+2. Tecnología útil: PEUGEOT Partner cuenta con aire acondicionado, que le ayudará a enfrentar de mejor forma las condiciones climátic; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
