--- a/Peugeot/Cube.html
+++ b/Peugeot/Cube.html
@@ -900,7 +900,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Viaja y lleva tu carga de manera cómoda y segura.</div>
+<div id="i24">Tecnología y seguridad para tí y tu carga</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/I9z15b7.png"/>
 <!--#/#--><!--#i5.i181.image.html:image/html-->
