--- a/Peugeot/Fade.html
+++ b/Peugeot/Fade.html
@@ -274,7 +274,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:16px;text-align:left;"> ¿Necesitas llevar tu carga de manera rápida, cómoda y segura? La <b>Peugeot Partner</b> te ofrece eso y más.</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:18px;text-align:left;"> ¿Necesitas llevar tu carga de manera rápida, cómoda y segura?</span></div>
             <div style="bottom:0px;height:40px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/wCs3wj3.png" style="height:35px;margin-top:-3px;">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-34px;"> <span> 
                 <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.peugeot.com.mx/gama/descubre-nuestros-vehiculos/peugeot-partner/tecnologia-y-seguridad.html" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/ZagjkSY.png" title="compartir en facebook" width="22" /></a>
