--- a/Peugeot/Venetian.html
+++ b/Peugeot/Venetian.html
@@ -2190,27 +2190,27 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 279px; height: 46px;
-        -ms-transform: translate(0, 0) translate(11px, 367px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(11px, 367px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(11px, 367px) rotate(0deg);
-        transform: translate(0, 0) translate(11px, 367px) rotate(0deg);
+#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 34px;
+        -ms-transform: translate(0, 0) translate(0px, 370px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 370px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 370px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 370px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
-#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: justify; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: justify; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
-#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 253px; height: 155px;
-        -ms-transform: translate(0, 0) translate(26px, 415px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(26px, 415px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(26px, 415px) rotate(0deg);
-        transform: translate(0, 0) translate(26px, 415px) rotate(0deg);
+#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 264px; height: 31px;
+        -ms-transform: translate(0, 0) translate(15px, 537px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(15px, 537px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(15px, 537px) rotate(0deg);
+        transform: translate(0, 0) translate(15px, 537px) rotate(0deg);
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 80px; height: 44px;
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 75px; height: 41px;
         -ms-transform: translate(0, 0) translate(221px, 554px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(221px, 554px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(221px, 554px) rotate(0deg);
@@ -2248,29 +2248,74 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i32.image.css:image/base/css*/
 #i32 { opacity: 1; }
 /*#/#*//*#i32.i33.positioning.css:positioning/base/css.2*/
-#i32 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
-        -ms-transform: translate(0, 0) translate(18px, 566px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(18px, 566px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(18px, 566px) rotate(0deg);
-        transform: translate(0, 0) translate(18px, 566px) rotate(0deg);
+#i32 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 20px; height: 20px;
+        -ms-transform: translate(0, 0) translate(18px, 572px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(18px, 572px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(18px, 572px) rotate(0deg);
+        transform: translate(0, 0) translate(18px, 572px) rotate(0deg);
 }
 /*#/#*//*#i34.image.css:image/base/css*/
 #i34 { opacity: 1; }
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.2*/
-#i34 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
-        -ms-transform: translate(0, 0) translate(46px, 566px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(46px, 566px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(46px, 566px) rotate(0deg);
-        transform: translate(0, 0) translate(46px, 566px) rotate(0deg);
+#i34 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 21px; height: 21px;
+        -ms-transform: translate(0, 0) translate(46px, 572px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(46px, 572px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(46px, 572px) rotate(0deg);
+        transform: translate(0, 0) translate(46px, 572px) rotate(0deg);
 }
 /*#/#*//*#i36.image.css:image/base/css*/
 #i36 { opacity: 1; }
 /*#/#*//*#i36.i37.positioning.css:positioning/base/css.2*/
-#i36 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
-        -ms-transform: translate(0, 0) translate(74px, 566px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(74px, 566px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(74px, 566px) rotate(0deg);
-        transform: translate(0, 0) translate(74px, 566px) rotate(0deg);
+#i36 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 21px; height: 21px;
+        -ms-transform: translate(0, 0) translate(74px, 572px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(74px, 572px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(74px, 572px) rotate(0deg);
+        transform: translate(0, 0) translate(74px, 572px) rotate(0deg);
+}
+/*#/#*//*#i49.text.css:text/base/css*/
+#i49 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i49.i50.positioning.css:positioning/base/css.2*/
+#i49 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 185px; height: 24px;
+        -ms-transform: translate(0, 0) translate(14px, 400px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(14px, 400px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(14px, 400px) rotate(0deg);
+        transform: translate(0, 0) translate(14px, 400px) rotate(0deg);
+}
+/*#/#*//*#i51.text.css:text/base/css*/
+#i51 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: justify; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i51.i52.positioning.css:positioning/base/css.2*/
+#i51 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 262px; height: 51px;
+        -ms-transform: translate(0, 0) translate(16px, 418px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 418px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 418px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 418px) rotate(0deg);
+}
+/*#/#*//*#i53.text.css:text/base/css*/
+#i53 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i53.i54.positioning.css:positioning/base/css.2*/
+#i53 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 133px; height: 18px;
+        -ms-transform: translate(0, 0) translate(14px, 458px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(14px, 458px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(14px, 458px) rotate(0deg);
+        transform: translate(0, 0) translate(14px, 458px) rotate(0deg);
+}
+/*#/#*//*#i55.text.css:text/base/css*/
+#i55 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: justify; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i55.i56.positioning.css:positioning/base/css.2*/
+#i55 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 274px; height: 47px;
+        -ms-transform: translate(0, 0) translate(15px, 477px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(15px, 477px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(15px, 477px) rotate(0deg);
+        transform: translate(0, 0) translate(15px, 477px) rotate(0deg);
+}
+/*#/#*//*#i57.text.css:text/base/css*/
+#i57 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i57.i58.positioning.css:positioning/base/css.2*/
+#i57 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 133px; height: 18px;
+        -ms-transform: translate(0, 0) translate(14px, 519px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(14px, 519px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(14px, 519px) rotate(0deg);
+        transform: translate(0, 0) translate(14px, 519px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2281,11 +2326,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">3 Razones para elegir el PARTNER</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">1. Sólida y lista para todo: Desde más de 20 años, PEUGEOT Partner demuestra su calidad y su fiabilidad en la carretera.
-
-2. Tecnología útil: PEUGEOT Partner cuenta con aire acondicionado, que le ayudará a enfrentar de mejor forma las condiciones climáticas.
-
-3. Motorización: Con la tecnología HDi Peugeot, Partner cuida el medio ambiente.</div>
+<div id="i12">Con la tecnología HDi Peugeot, Partner cuida el medio ambiente.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/wCs3wj3.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
@@ -2312,6 +2353,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i34" src="https://i.imgur.com/3ZGLjsz.png"/>
 <!--#/#--><!--#i36.image.html:image/html-->
 <img id="i36" src="https://i.imgur.com/cgfkI21.png"/>
+<!--#/#--><!--#i49.text.html:text/html-->
+<div id="i49">1.Sólida y lista para todo:</div>
+<!--#/#--><!--#i51.text.html:text/html-->
+<div id="i51">Desde más de 20 años, PEUGEOUT Partner demuestra su calidad y su fiabilidad en la carretera.</div>
+<!--#/#--><!--#i53.text.html:text/html-->
+<div id="i53">2.Tecnología útil:</div>
+<!--#/#--><!--#i55.text.html:text/html-->
+<div id="i55">PEUGEOT Partner cuenta con aire acondicionado, que le ayudará a enfrentar de mejor forma las condiciones climáticas.</div>
+<!--#/#--><!--#i57.text.html:text/html-->
+<div id="i57">3. Motorización:</div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2440,6 +2491,16 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i49.i50.positioning.js:positioning/base/js.2*/
+bmShow('i49');
+/*#/#*//*#i51.i52.positioning.js:positioning/base/js.2*/
+bmShow('i51');
+/*#/#*//*#i53.i54.positioning.js:positioning/base/js.2*/
+bmShow('i53');
+/*#/#*//*#i55.i56.positioning.js:positioning/base/js.2*/
+bmShow('i55');
+/*#/#*//*#i57.i58.positioning.js:positioning/base/js.2*/
+bmShow('i57');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2462,9 +2523,7 @@ name: 3 Razones para elegir el PARTNER; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: 1. Sólida y lista para todo: Desde más de 20 años, PEUGEOT Partner demuestra su calidad y su fiabilidad en la carretera.
-
-2. Tecnología útil: PEUGEOT Partner cuenta con aire acondicionado, que le ayudará a enfrentar de mejor forma las condiciones climátic; customName: false;
+name: Con la tecnología HDi Peugeot, Partner cuida el medio ambiente.; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
@@ -2509,4 +2568,24 @@ name: cgfkI21.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i36.i37.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i49.text.meta:text/meta*/
+name: 1.Sólida y lista para todo:; customName: false;
+/*#/#*//*#i49.i50.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i51.text.meta:text/meta*/
+name: Desde más de 20 años, PEUGEOUT Partner demuestra su calidad y su fiabilidad en la carretera.; customName: false;
+/*#/#*//*#i51.i52.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i53.text.meta:text/meta*/
+name: 2.Tecnología útil:; customName: false;
+/*#/#*//*#i53.i54.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i55.text.meta:text/meta*/
+name: PEUGEOT Partner cuenta con aire acondicionado, que le ayudará a enfrentar de mejor forma las condiciones climáticas.; customName: false;
+/*#/#*//*#i55.i56.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i57.text.meta:text/meta*/
+name: 3. Motorización:; customName: false;
+/*#/#*//*#i57.i58.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
