--- a/Simulador Movil/Iframe.html
+++ b/Simulador Movil/Iframe.html
@@ -1,11 +1,42 @@
 
 <!DOCTYPE html><html>
+<head>
+	<style type="text/css">
+
+	   .wrapper{
+	   	padding-top: 73px;
+	   	padding-left: 24px;
+	   	position:relative;
+	   	width: 382px;
+	   	height:580px;
+
+	   }
+
+		.celular{
+			position: fixed;
+			z-index: 0px;
+			
+		}
+
+		.iframe1{
+			position: absolute;
+			z-index: 1px;
+			
+		}
 
 
-	<div class="iframeDiv">
+	</style>
+</head>
 
-<iframe id="iframe1" src="http://love4native.com/adidas/" width="370" height="590" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0" class="iframeMob">
+<body>
+	<div class="celular">
+<img src="https://i.imgur.com/Jg1iyRL.png" style="width: 420px; height: 760px;">	</div>
+
+<div class= "wrapper">
+
+<iframe id="iframe1" src="http://love4native.com/alula-progress-gold/" width="370" height="590" frameborder="2" scrolling="yes" class="iframeMob" >
 </iframe>
 </div>
-			
+	
+	</body>		
 </html>
