demos para biznaga

--- a/Simulador Movil/Iframe.html
+++ b/Simulador Movil/Iframe.html
@@ -34,7 +34,7 @@
 
 <div class= "wrapper">
 
-<iframe id="iframe1" src="https://www.mosaicmedia.com.mx/" width="370" height="590" frameborder="2" scrolling="yes" class="iframeMob" >
+<iframe id="iframe1" src="https://www.mosaic-media.com.mx/native/campana/garat/garat-index.html" width="370" height="590" frameborder="2" scrolling="yes" class="iframeMob" >
 </iframe>
 </div>
 	
