--- a/Tiguan Nov/Fade-Gif.html
+++ b/Tiguan Nov/Fade-Gif.html
@@ -216,7 +216,7 @@
             z-index: 5;
             margin-left: 70px;
             left: px;
-            background-color: #b5adaa;
+            background-color: #0e69a8;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
