--- a/Tiguan Nov/Fade-Gif.html
+++ b/Tiguan Nov/Fade-Gif.html
@@ -36,7 +36,7 @@
 
         .PapaJohnFijo .bzm_text_bold,
         .PapaJohnFijo .bzm_text_medium {
-            line-height: 1.4;
+            line-height: 1;
             text-decoration: none;
             color: #000;
         }
@@ -210,11 +210,11 @@
 
         .cta {
             position: absolute;
-            top: 335px;
-            width: 210px;
+            top: 345px;
+            width: 180px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 70px;
+            margin-left: 65px;
             left: px;
             background-color: #0e69a8;
             padding: 5px;
@@ -229,7 +229,7 @@
         <a href="https://goo.gl/maps/ddKqd48NGv52" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
 
-            <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:72%; color: white;">Llévame a la Concesionaria más cercana</span></div>
+            <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:60%; color: white;">Llévame a la Concesionaria más cercana</span></div>
 
                 
                 <div class="te-cover"> 
@@ -238,12 +238,12 @@
                     <div class="te-front"></div>
                     <div class="te-back"></div>
                 </div>
-                <div style="margin-top:2px; margin-left: 10px; margin-right: 10px;">
+                <div style="margin-top:2px; margin-left: 2px; margin-right: 10px;">
                     <div class="bzm_text">
-                        <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:28px; text-align: center; margin-left:9px; margin-right:10px; Margin-top:10px; width: 90%;">
+                        <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:27px; margin-left:0px; margin-right:0px; Margin-top:10px; text-align: left; width: 90%;">
 						    Selección Especial de Autos en Polanco.
 						</span>
-                       <span class="bzm_text_medium" style="color: black;line-height:1em; font-size:20px; width:95%; text-align:justify;">
+                       <span class="bzm_text_medium" style="color: black;line-height:em; font-size:23px; width:90%; text-align:center;">
                         <p style="margin-top: 5px; line-height: 1.3em; margin-left: 3px; ">
                            <strong>Sólo Esta Semana,</strong> en tu Concesionaria más cercana, podrás encontrar <strong>Oportunidades Irresistibles.</strong>  </p>
 
