--- a/Tiguan Nov/Fade-Gif.html
+++ b/Tiguan Nov/Fade-Gif.html
@@ -36,7 +36,7 @@
 
         .PapaJohnFijo .bzm_text_bold,
         .PapaJohnFijo .bzm_text_medium {
-            line-height: 1;
+            line-height: 2;
             text-decoration: none;
             color: #000;
         }
@@ -180,7 +180,7 @@
             cursor: pointer;
             opacity: 1;
             background-color: #9d32b1;
-            font-family: "Source Sans Pro";
+            font-family: "Roboto";
             font-size: 14px;
             color: #ffffff;
             font-weight: bold;
@@ -210,8 +210,8 @@
 
         .cta {
             position: absolute;
-            top: 293px;
-            width: 200px;
+            top: 310px;
+            width: 223px;
             line-height: 1.5em;
             z-index: 5;
             margin-left: 62px;
@@ -229,7 +229,7 @@
         <a href="https://goo.gl/maps/ddKqd48NGv52" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
 
-            <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:60%; color: white;">LLÉVAME A LA CONCESIONARIA MÁS CERCANA</span></div>
+            <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:68%; color: white;">LLÉVAME A LA CONCESIONARIA MÁS CERCANA</span></div>
 
                 
                 <div class="te-cover"> 
