--- a/Tiguan Nov/Fade-Gif.html
+++ b/Tiguan Nov/Fade-Gif.html
@@ -229,7 +229,7 @@
         <a href="https://goo.gl/maps/ddKqd48NGv52" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
 
-            <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:68%; color: white;">LLÉVAME A LA CONCESIONARIA MÁS CERCANA</span></div>
+            <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">LLÉVAME A LA CONCESIONARIA </span></div>
 
                 
                 <div class="te-cover"> 
