--- a/ADIDAS/videos new/Video.html
+++ b/ADIDAS/videos new/Video.html
@@ -61,7 +61,7 @@
         <div class="carousel-container">
 			<div style="text-align:center;">
 				<script>var playersrc;</script>
-					<iframe class="yt560x315" id="JSytplayer" width="290" height="176" src="https://www.youtube.com/embed/3c0Cy1F6km4?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<iframe class="yt560x315" id="JSytplayer" width="290" height="176" src="https://www.youtube.com/embed/3c0Cy1F6km4?rel=0&autoplay=0&modestbranding=0&loop=1&controls=0&mute=0" frameborder="0"  allowfullscreen></iframe>
 			</div>
 		</div>
 			<div class="bzm_text">
