--- a/LOWES2/fade.html
+++ b/LOWES2/fade.html
@@ -332,7 +332,7 @@
             <br/>  
             <span class="value_text_light value_text_small" style="color:black;">
                 <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 15px; line-height: 1.2em">
-    ¿Crees que una <b>jaula para pájaros unas latas de pinturas o un zapatero</b> sólo sirven para lo que fueron creados?.
+    ¿Crees que una <b>jaula para pájaros unas latas de pinturas o un zapatero</b> sólo sirven para lo que fueron creados?
 
 
                 </p> 
