actualización imagen cubo

--- a/Claro Hogar/Cube.html
+++ b/Claro Hogar/Cube.html
@@ -813,7 +813,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i192.image.html:image/html-->
-<img id="i192" src="https://i.imgur.com/7iWYS3h.jpg"/>
+<img id="i192" src="https://i.imgur.com/HFIO91O.png"/>
 <!--#/#--><!--#i5.i196.text.html:text/html-->
 <div id="i196">¡Conoce los nuevos paquetes Claro Hogar y revoluciona el entretenimiento para tu familia!</div>
 <!--#/#--><!--#i5.i229.image.html:image/html-->
@@ -888,6 +888,7 @@ document.getElementById('i91').addEventListener('click', function(e){
 /*#/#*//*#i227.i228.positioning.js:positioning/base/js.2*/
 bmShow('i227');
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
+/* Name: On Click; */
 
 /*#/#*//*#i5.i192.image.js:image/base/js*/
 
