--- a/WeedingFiestaAmericana/Venetian.html
+++ b/WeedingFiestaAmericana/Venetian.html
@@ -2203,22 +2203,22 @@ url('fonts/') format('svg');
 }
 /*#/#*/
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Brandon_reg (1)"; font-size: 27px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Brandon_reg (1)"; font-size: 26px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 257px; height: 123px;
-        -ms-transform: translate(0, 0) translate(21px, 428px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(21px, 428px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(21px, 428px) rotate(0deg);
-        transform: translate(0, 0) translate(21px, 428px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(21px, 418px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(21px, 418px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(21px, 418px) rotate(0deg);
+        transform: translate(0, 0) translate(21px, 418px) rotate(0deg);
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 67px; height: 55px;
-        -ms-transform: translate(0, 0) translate(221px, 543px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(221px, 543px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(221px, 543px) rotate(0deg);
-        transform: translate(0, 0) translate(221px, 543px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 95px; height: 55px;
+        -ms-transform: translate(0, 0) translate(190px, 538px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(190px, 538px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(190px, 538px) rotate(0deg);
+        transform: translate(0, 0) translate(190px, 538px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2259,7 +2259,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">Convierte el mayor de tus sueños en una experiencia única para todos los que amas.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/CZCjb83.jpg"/>
+<img id="i16" src="https://i.imgur.com/2h5U4ls.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
