--- a/Claro Hogar/Cube.html
+++ b/Claro Hogar/Cube.html
@@ -544,37 +544,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
-/*#/#*//*#i5.i30.shape.css:shape/base/css*/
-#i30 { background-color: #fafafa; opacity: 1;
-}
-/*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
-#i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i5.i192.image.css:image/base/css*/
-#i192 { opacity: 1; }
-/*#/#*//*#i192.i193.positioning.css:positioning/base/css.1*/
-#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 170px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i196.text.css:text/base/css*/
-#i196 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#visibility.css:visibility/globalcss*/
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
-}
-/*#/#*//*#i196.i197.positioning.css:positioning/base/css.1*/
-#i196 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 247px; height: 74px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 88px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 88px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 88px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 88px) rotate(0deg);
 }
 /*#/#*//*#cube.css:cube/globalcss.1*/
 
@@ -705,29 +677,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#i5.i229.image.css:image/base/css*/
-#i229 { opacity: 1; }
-/*#/#*//*#i229.i230.positioning.css:positioning/base/css.2*/
-#i229 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 60px; height: 23px;
-        -ms-transform: translate(0, 0) translate(237px, 224px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(237px, 224px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(237px, 224px) rotate(0deg);
-        transform: translate(0, 0) translate(237px, 224px) rotate(0deg);
-}
-/*#/#*//*#i5.i216.shape.css:shape/base/css*/
-#i216 { background-color: #dedede; opacity: 0.00;
-}
-/*#/#*//*#i217.i218.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i216 { cursor: pointer; }
-/*#/#*//*#i216.i219.positioning.css:positioning/base/css.1*/
-#i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 99.6%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i5 { cursor: pointer; }
 /*#/#*//*#i6.i40.shape.css:shape/base/css*/
 #i40 { background-color: #fafafa; opacity: 1;
 }
@@ -808,20 +757,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i91"></div>
 <!--#/#-->
 </div>
-<!--#/#--><!--#i2.i5.cube-panel.html:cube-panel/html-->
-<div id="i5" class="panel-content-holder">
-    <!--#i5.i30.shape.html:shape/html-->
-<div id="i30"></div>
-<!--#/#--><!--#i5.i192.image.html:image/html-->
-<img id="i192" src="https://i.imgur.com/HFIO91O.png"/>
-<!--#/#--><!--#i5.i196.text.html:text/html-->
-<div id="i196">¡Conoce los nuevos paquetes Claro Hogar y revoluciona el entretenimiento para tu familia!</div>
-<!--#/#--><!--#i5.i229.image.html:image/html-->
-<img id="i229" src="https://i.imgur.com/dsWA2pv.png"/>
-<!--#/#--><!--#i5.i216.shape.html:shape/html-->
-<div id="i216"></div>
-<!--#/#-->
-</div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
 <div id="i6" class="panel-content-holder">
     <!--#i6.i40.shape.html:shape/html-->
@@ -890,22 +825,8 @@ bmShow('i227');
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 
-/*#/#*//*#i5.i192.image.js:image/base/js*/
-
-/*#/#*//*#i5.i229.image.js:image/base/js*/
-
-/*#/#*//*#i229.i230.positioning.js:positioning/base/js.2*/
-bmShow('i229');
-/*#/#*//*#i216.i217.actions.js:actions/base/js*/
-/* Name: On Click; */
-document.getElementById('i216').addEventListener('click', function(e){
-    /*#i217.i218.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.claro.com.pe/personas/hogar/tv/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-/*#/#*//*#i5.i52.actions.js:actions/base/js*/
-/* Name: On Click; */
-
+/*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
+ 
 /*#/#*//*#i6.i210.image.js:image/base/js*/
 
 /*#/#*//*#i220.i221.actions.js:actions/base/js*/
@@ -921,6 +842,8 @@ document.getElementById('i220').addEventListener('click', function(e){
 bmShow('i231');
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
+
+/*#/#*//*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
 
 /*#/#*//*#i226.visibility.js:visibility/js*/
 function bmShow(id) {
@@ -970,30 +893,6 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i2.i5.cube-panel.meta:cube-panel/meta*/
-    name: Cube Panel 2;
-/*#/#*//*#i5.i30.shape.meta:shape/meta*/
-name: Background;
-/*#/#*//*#i30.i31.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i192.image.meta:image/meta*/
-name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i192.i193.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i196.text.meta:text/meta*/
-name: Texto; customName: 1;
-/*#/#*//*#i196.i197.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i229.image.meta:image/meta*/
-name: dsWA2pv.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i229.i230.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i216.shape.meta:shape/meta*/
-name: Link copy;
-/*#/#*//*#i216.i219.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i6.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 3;
