--- a/Claro Hogar/slider-ecta-central.html
+++ b/Claro Hogar/slider-ecta-central.html
@@ -229,12 +229,12 @@
             <div id="te-wrapper" class="te-wrapper">
                 
                 <div class="te-images">
-                    <img src="https://i.imgur.com/OEOZexo.jpg" alt="" />
                     <img src="https://i.imgur.com/ShNcmng.jpg" alt="" />
+                  
                     <img src="https://i.imgur.com/l1VgNMe.jpg" alt="" />
                 </div>
                 <div class="te-cover">
-                    <img src="https://i.imgur.com/OEOZexo.jpg" alt="" />
+                    <img src="https://i.imgur.com/ShNcmng.jpg" alt="" />
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
